fixed <h1> on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,3 +112,10 @@ h3 {
   transform:none;
   box-shadow: none;
 }
+@media screen and (max-width: 520px){
+  .container #home h1{
+    text-align: center;
+    
+  }
+  
+}
